增加新笔记

--- a/NCRF/计算机三级——网络技术.md
+++ b/NCRF/计算机三级——网络技术.md
@@ -51,7 +51,7 @@
 -   ***在RPR环中，源节点向目的节点成功发送的数据帧要由 目的节点 从环中回收***  
 - RPR用***统计复用***的方法传输IP分组
 
-## 网络接入技术
+## 网络接入技术（也称宽带接入技术）
 ### 数字用户线xDSL接入技术
 x表示类型，***xDSL技术根据上行和下行的速率分为速率对称型和速率非对称型（在我们学习的内容中仅有HDSL对称）***
 ![[Pasted image 20250821120803.png]]
@@ -64,18 +64,72 @@ x表示类型，***xDSL技术根据上行和下行的速率分为速率对称型
 | :------: | :------: | :-------------: |
 | **下行速率** | 从网络到用户设备 |  下载文件、视频、加载网页   |
 | **上行速率** | 从用户设备到网络 | 视频直播、上传照片、发送大邮件 |
-### 光纤同轴电缆混合网HFC
+### 光纤同轴电缆混合网HFC（是多用户共享带宽）
 - HFC由*有线电视头端，长距离干线，放大器，馈线和下引线*组成。
 - HFC是经过双向改造的有线电视网络，是***双向传输系统***，用户通过有线电视网宽带接入Internet
 - HFC使用***Cable Modem***把***用户计算机***和***有线电视同轴电缆***连接，数据传输速率可达***10-36Mbit/s***
 - ***Cable Modem（电缆调制解调器）利用 频分复用 的方法将信道分为上行信道和下行信道，把 用户计算机 与 有线电视同轴电缆 连接起来***
 ![[Pasted image 20250821131153.png]]
 
-### 光纤接入技术
+### 光纤接入技术（并非无线，光纤接入）
 无源光纤网（PON **Passive Optical（与光有关的） Network**）标准化分类***（一级OC为：51.84Mbps）***
 ![[Pasted image 20250821131710.png]]
 - OC-3其实就是3x一级OC的速率，而OC-3是***对称业务***
 - 上行OC-3和下行OC-12其实***速率值也是直接相乘***
 - 传输介质可以是***一根或两根单模光纤***，双向传输通过***波分复用WDM实现***
 - APON（宽带无源光网络）是ATM PON简称，***ATM是基于信元的传输协议***
+- ***OC-x速率为51.84xMbps***
 >**ATM​**​ 指的是 ​**​异步传输模式（Asynchronous Transfer Mode）​**​
+
+>***光纤传输系统的中继距离可以达到100km以上***
+### 无线接入技术
+- 802.11标准的无线***局域网接入技术（WLAN，WIFI）***，针对***近距离传输***
+- 802.16标准的无线***城域网技术（WiMAX）***，针对***远距离传输***
+- ***Ad hoc（无线网格网WMN）技术***
+EEE802.11标准的重点在解决***局域网范围的移动节点***通信问题
+![[Pasted image 20250821222759.png]]
+- 802.11a提高速率到54Mbit/s
+
+
+而IEEE802.16标准终点解决***建筑物之间的数据通信（建筑所以多为固定节点）***问题
+![[Pasted image 20250821222819.png]]
+- 802.16采用***全双工，宽带通信方式***
+- 建立了无线网络使用更高毫米波的***10~66GHz***
+- 与***802.16***标准工作组对应组织为***WiMAX***，最高速率***134Mbit/s***
+
+### 特殊题目
+![[Pasted image 20250821224001.png]]
+
+# 中小型网络总体规划和设计
+## 核心层网络结构设计：技术标准主要是GE/10GE，核心设备时高性能交换路由器，整个***网络流量的40%-60%***都需要由核心层网络承担
+![[Pasted image 20250821230231.png]]
+- 这种方法的核心***路由器的流量压力大***，因为被所有的服务器连接
+
+![[Pasted image 20250821230259.png]]
+- 当交换机坏掉，会全部瘫痪
+- 且核心路由器不多，总带宽有限
+>***两者均采用了链路冗余的方法***
+
+## 汇聚层和接入层的设计
+汇聚层网络可以将位于不同位置的子网连接到核心层网络，实现***路由汇聚***的功能对网络系统进行分层设计可便于规划与分配带宽，有利于均衡负荷，提高网络效率。实际情况验证：***层次之间的上联带宽与下一级带宽之比***一般控制在***1：20（这一节只需要记好这个数字）***
+
+## 网络关键设备选型
+### 路由器
+#### 分类和标准
+***40Gbit/s的路由器背板交换能力是区分高端和中低端的分水岭***
+![[Pasted image 20250821231119.png]]
+- ***①吞吐量***：指路由器的包转发能力，包括端口吞吐量与整机吞吐量。路由器的***包转发能力***与路由器的***端口数量、速率、包类型、包长度***关系密切。***（包转发能力只是用来衡量，且这四个指标只能用来衡量包转发能力，不能直接决定吞吐量）***
+- ***②背板能力***：背板是路由器输入输出端之间的物理通道，它***决定了路由器的吞吐量***，高性能路由器一般采用***交换式***结构，而传统路由器采用***共享背板***
+- ***③丢包率***：常被用作***路由器超负荷工作时的性能衡量指标***
+- ④延时与延时抖动：从数据包的第一个比特进入路由器，到该帧的最后一个比特离开路由器其间所经历的时间，一般***不把其作为主要指标***（数据包对延时要求不高），***语音、视频业务对延时抖动要求却较高***
+- ***⑤突发处理能力***：常以***最小帧间隔发送数据包而不引发丢失的最大发送速率***来衡量突发处理能力。
+- ⑥路由表容量：路由表是决定包转发路径的主要依据
+- ⑦服务质量：主要表现在***队列管理机制、端口硬件队列管理、支持QoS协议***上
+![[Pasted image 20250821232105.png]]
+
+#### 高端路由器可靠可用性指标（两个50ms）
+- 无故障连续工作时间***（MTBT ***Mean Time Between Failures***）大于10万小时***，故障恢复时间***30分钟***
+- 系统自动保护切换功能，切换时间小于***50ms***
+- SDH与ATM接口自动保护切换功能，切换时间小于***50ms***
+- 主处理器、存储器、电源、总线与接口管理等需要有热插拔冗余，线卡有备份
+- 路由器不存在单点故障。
