增加路由聚合笔记

--- a/NCRF/计算机三级——网络技术.md
+++ b/NCRF/计算机三级——网络技术.md
@@ -200,3 +200,43 @@ D：Destination（目的地）
 ![[Pasted image 20250823220826.png]]
 
 ## IPv6地址规划方法
+![[Pasted image 20250824231145.png]]
+- **仅前导0可以简化**
+![[Pasted image 20250824231527.png]]
+- **128位**表示一个IPv6地址，每**16位划分8个位段（所以说每段转化为16进制数后为4位），每个位段转化为16进制数，用冒号隔开**
+- IPv6每个段的**前导0可以省略，不可把位段中的有效0压缩**
+- 若包含一长串0，可以把***连续位段均为0的地方简写为：：，且这种写法只可在一个地址中出现一次（尤其注意只可出现一次）***
+- ***IPv6只支持前缀长度表示法​**​*：在表示一个IPv6网络或子网时，​**​不能​**​像IPv4那样使用“子网掩码”（如 `255.255.255.0`），而​**​必须​**​使用“斜杠记法”（CIDR记法），即在IPv6地址后面加上一个斜杠`/`和一个表示网络位长度的数字（如 `/64`）
+
+# 路由设计基础
+## IP路由选择
+![[Pasted image 20250824233140.png]]
+### 分组转发
+分组转发是指路由器转发IP分组的物理传输过程。一台主机通常是与一台路由器相连接，这台路由器则为默认路由器，也叫第一跳或***缺省路由器***。 
+#### 分类
+- 直接转发：同一网络
+- 间接转发：不同网络
+![[Pasted image 20250824233358.png]]
+
+### 路由选择算法分类
+![[Pasted image 20250824233605.png]]
+![[Pasted image 20250824233623.png]]
+
+## 路由汇聚
+***简单的汇聚方法：从不同的开始找，不同的以及之后的变0，相同的照抄，并把相同的位数作为CIDR的数***
+### **！特殊情况（任意一个不满足触发）**
+- **1.聚合后的IP不可与已有（被聚合）的IP相同**
+- **2.聚合后可分配主机数>3（注意减去头和尾的网络地址和受限广播地址：$2^n-2$）**
+- ***当触发1时，也是需要向网络位借主机位置（目的是借到网络位的一个二进制的“1”，让这个聚合后的IP地址变化，不再和被聚合的某个IP地址一样），注意：在这个过程中，如果首次聚合的IP同时触发了1,2条件，在解决问题1的时候也可以解决问题2，因为问题1的解决可能会需要多次借位，借借借借到厌倦***
+- **当触发2时，需要往网络位借位给主机位置，让可分配主机数更多，直到满足条件2**
+![[Pasted image 20250825000634.png]]
+#### eg1：聚合172.0.147.161，172.0.147.162，172.0.147.163，
+172.0.147.101000 01   
+172.0.147.101000 10  ==> 172.0.147.10100 000
+172.0.147.101000 11       $2^2-2=2<3$      
+**触发条件2**，借位变为172.0.147.160/29
+#### eg2：聚合172.0.147.145，172.0.147.144，172.0.147.146
+172.0.147.100100 00
+172.0.147.100100 01 ==> 172.0.147.101000 00
+172.0.147.100100 10
+**触发条件1+2**，借位变成172.0.147.10010 000**解决条件2仍然触发条件1**，再次172.0.147.1001 0000，再次172.0.147.100 00000可，变为172.0.147.128/27
