添加交换机笔记

--- a/NCRF/计算机三级——网络技术.md
+++ b/NCRF/计算机三级——网络技术.md
@@ -224,6 +224,10 @@ D：Destination（目的地）
 
 ## 路由汇聚
 ***简单的汇聚方法：从不同的开始找，不同的以及之后的变0，相同的照抄，并把相同的位数作为CIDR的数***
+- **但题目不会出的这么直接：比如有时候需要先两个聚合，然后再去跟第三个聚合，也可以选择直接三个聚合**
+- **不在同一地址块的（在同一网络下才可以一块儿聚合（某公司，某企业，某学校）），当没有在同一网络下的条件时，子网掩码不同是不在同一网络下的，不可聚合。但若两个聚合后和第三个ip地址的子网掩码相同则可以再聚合**
+![[Pasted image 20250825132100.png]]
+
 ### **！特殊情况（任意一个不满足触发）**
 - **1.聚合后的IP不可与已有（被聚合）的IP相同**
 - **2.聚合后可分配主机数>3（注意减去头和尾的网络地址和受限广播地址：$2^n-2$）**
@@ -240,3 +244,266 @@ D：Destination（目的地）
 172.0.147.100100 01 ==> 172.0.147.101000 00
 172.0.147.100100 10
 **触发条件1+2**，借位变成172.0.147.10010 000**解决条件2仍然触发条件1**，再次172.0.147.1001 0000，再次172.0.147.100 00000可，变为172.0.147.128/27
+
+## 路由选择协议
+### 自治系统
+![[Pasted image 20250825132325.png]]
+路由选择协议有：***内部网关协议（RIP/OSPF），外部网关协议（BGP）***
+#### RIP（路由信息协议Routing Information Protocol）基于***距离向量***
+![[Pasted image 20250825132519.png]]
+- RIP原理：路由刷新报文的主要内容是**若干个（V，D）表**
+- V：表示该路由器可以到达的***目的网络或者目的主机***
+- D：对应该路由上的***“跳数”***
+- RIP规定，路由器每***30s周期性***向外广播一个（V，D）报文
+- RIP规定，一条有限的路径长度不能超过***15***
+VD便于记忆：
+![[Pasted image 20250825134140.png]]
+### RIP工作过程
+路由表的更新：见计网大题详解,***按照最短路径原则更新***
+### OSPF（开放最短路径优先，Open Shortest Path First）
+![[Pasted image 20250825133021.png]]
+#### 特点
+- ①OSPF使用***分布式链路状态协议***，而RIP使用的是距离向量协议（使用距离或跳数来确定传输路径）。
+- ②OSPF协议要求路由器发送的信息是本路由器与哪些路由器相连，以及链路状态的度量。***链路状态“度量”***主要是指***费用、距离、延时、带宽***等（记录的信息比RIP多）。
+- ③OSPF协议要求当链路状态发生变化时用***“洪泛法”***向所有路由器发送此信息， 而RIP仅向自己相邻的几个路由器发送交换路由信息。
+- ④路由器之间频繁地交换链路状态信息，因此所有路由器最终都会建立一个***链路状态数据库***，也就是***全网拓扑结构图***。
+- ⑤为了适应规模很大的网络，并使更新过程收敛的更快，OSPF协议将一个自治系统再划分为若干个更小的范围，叫做***区域***。
+- ⑥每个区域有一个***32位区域标识符***（用点分十进制表示），在一个区域内的路由器数***不超过200个***
+### BGP（边界网关协议，Border Gateway Protocol）基于***路径矢量***
+#### 主要特征
+- ①BGP也称***边界网关协议***（又称为外部网关协议），是在AS（**自治系统​**​（Autonomous System））之间传递路由信息以及控制优化路由信息。 
+- ②BGP是一种***“路径矢量”路由协议***，BGP-4采用了***路由向量路由协议***，与RIP、 OSPF有很大区别。 
+- ③为了保证BGP的可靠传输，BGP发言人之间交换信息需要先建立***TCP连接（重要）***
+### 工作过程
+![[Pasted image 20250825133858.png]]
+- 打开是**建立关系**
+- 更新是**发送路由消息（或撤销），需要周期性的一般为30s确认**
+- 保活是**确认打开报文和证实关系**
+- 通知是**发送检测差错，路由信息发生变化时用的是UPDATE而非NOTIFICATION**
+
+# 局域网技术基础及应用
+## 局域网组网基础
+局域网是一种分布在较小距离范围，连接各种设备并为这些设备间的信息交换提供途径的计算机网络。局域网采用***IEEE802标准***
+![[Pasted image 20250825135242.png]]
+
+## OSI参考模型
+![[Pasted image 20250825135319.png]]
+## 重点：传统以太网的物理层标准命名法
+![[Pasted image 20250825135357.png]]***特别注意x和y的单位，Mbps和100m***
+
+## 综合布线系统（PDS **​Premises Distribution System​**）
+![[Pasted image 20250825135541.png]]
+![[Pasted image 20250825135558.png]]
+### 系统标准（只需要对应就可以）
+- ①ANSI/TIA/EIA 568-A：定义了语音与数字通信布线系统
+- ②TIA/EIA 568-B
+![[Pasted image 20250825142645.png]]
+
+- ③ISO/IEC **11801**（把有关元器件和测试方法归入国际标准） 
+- ④GB/T***50311—2000***和GB/T***50312-2000***（我国指定的综合布线系统工程的国家标准）
+### 传输介质
+![[Pasted image 20250825143052.png]]
+### 连接设备
+![[Pasted image 20250825143620.png]]
+### 建筑群子系统设计（建筑物之间一般用光纤连接）
+通信线路铺设主要有：***地下管道布线、直埋布线、架空布线、巷道布线***4种方式或者是这4种方式的任意组合。
+#### 地下管道布线（最好，最理想，最有利于保护）
+![[Pasted image 20250825143736.png]]
+#### 巷道布线
+![[Pasted image 20250825143834.png]]
+#### 直埋布线（最不利于保护）
+![[Pasted image 20250825143854.png]]
+#### 架空布线
+![[Pasted image 20250825143910.png]]
+
+### 设备间子系统（垂直干线或水平干线）
+![[Pasted image 20250825144005.png]]
+### 管理子系统（增加交换更改扩展改变线缆路由）
+![[Pasted image 20250825144016.png]]
+### 干线（垂直）子系统（点对点和分支结合，也可混合使用）
+![[Pasted image 20250825144053.png]]
+#### 水平子系统（工程最大，范围最广，最难施工）
+![[Pasted image 20250825144106.png]]
+- ***电缆长度一般不超过90m***
+- 高速率要求时，用**光纤**
+#### 工作区子系统
+![[Pasted image 20250825144207.png]]
+- 嵌入式安装插座用于***连接双绞线***
+- 多介质信息插座用于***连接铜缆和光纤***
+![[Pasted image 20250825144216.png]]
+- 单一信息插座进行两项服务：采用***一线两用或Y形适配器***
+- 连接使用不同信号的***数模转换***和***数据速率转换***装置，采用适配器
+## 局域网互联设备
+### 中继器（工作在物理层，不是网络互联设备）
+- 负责两个节点在物理层上按位传递信息，对传输介质上的信号波形***接收、放大、整形、转发***。
+- ***不对帧做任何处理***，仅起到增加传输介质长度的作用，所以中继器***不属于网络互联设备***。
+### 网桥
+- 网桥是连接两个局域网的设备，工作在***MAC子层(数据链路层的一个子层)***上，并且它可以完成具有相同或相似体系结构的网络系统的连接。
+- 网桥是***依靠MAC地址表***来确定帧是否需要发，以及向何处转发。
+- ***透明网桥***和***源路由网桥***的标准分别由***IEEE802.1***与***IEEE802.5***两个分委会制定。 
+- 其中透明网桥的标准为***IEEE802.1d***。透明网桥采用***生成树算法***，来防止出现环路情况。
+### 交换机
+- 基于***MAC地址***识别，能完成封装转发数据包功能的网络设备
+- 二层交换机工作于***数据链路层***，它建立和维护一个表示***MAC地址与交换机端口***对应关系的交换表。
+- 三层交换技术就是二层交换技术加上三层转发技术，是在***网络模型中的第三层（网络层）***，实现了数据包的高速转发，既可以实现网络路由功能，又可根据不同网络状况做到最优网络性能。
+### 集线器（工作在物理层，并不根据MAC地址接收并转发）
+- 集线器的主要功能是对接收到的信号进行**再生整形放大**，以扩大网络的传输距离，同时把所有节点集中在以它为中心的节点上。
+- 发送数据没有针对性，采用***广播***的方式发送
+- 工作在***物理层***，所有节点通过双绞线连接在一个集线器上，***节点（不是集线器而是节点）***执行CSMA/CD（C​arrier ​S​ense ​M​​ultiple ​​A​​ccess with ​C​​ollision ​​D​​etection）介质访问控制方法
+- 当一个结点发送数据时，***所有结点***都能接收到。连接到一个集线器的所有结点***共享一个冲突域***。通过在网络链路中串接一个集线器可以监听该链路中的数据包，多个结点***不能同时发送数据帧，可以同时接收数据帧。***即为网络拓扑中的总线结构
+
+# 交换机及其配置
+## 交换机基础
+![[Pasted image 20250825151414.png]]
+### 基本功能
+**建立和维护一个表示MAC地址与交换机端口对应关系的交换表。** 
+**在发送节点和接收节点之间建立一条虚连接**【即发送方所连接的交换机端口（源端口）到接收方所连的交换机端口（目的端口）之间建立虚连接】完成数据帧的转发或过滤。
+## 交换表
+**小型交换机交换表（35系列）**，交换机在***超级用户模式***下：**show mac-address-table    记法：展示mac地址表**
+![[Pasted image 20250825171836.png]]
+- ***目的mac地址（注意是点分隔***）、地址类型、VLAN、目的端口
+**大型交换机交换表（40/65系列）**，交换机在超级用户模式下：**show cam dynamic**
+![[Pasted image 20250825172009.png]]
+- 表中**无地址类型**
+- VLAN，***目的mac地址（短横线分隔）***，端口
+## 交换机的交换模式
+### 静态交换
+静态交换是由人工来完成端口之间传输通道的建立。
+### 动态交换
+动态交换方式中依据目的***MAC地址查询交换表***，根据表中给出的输出端口来临时建立传输通道，这个传输通道在*一个数据帧传送完成后自动断开*。
+- 交换机最常采用动态交换方式
+- 动态交换模式主要有存储转发和直通两种模式。而直通模式又有快速转发交换和碎片丢弃交换两种方式。 归纳起来，交换机主要有***快速转发、碎片丢弃、存储转发***三种交换模式。
+### 交换模式差异
+#### 快速转发交换模式
+- 也称作***直通交换模式***，他是交换机接收了帧的***前14个字节***，即接收到***帧中6个字节***的目的地址后便*立即转发数据帧*。该交换模式在整个数据帧到之前就开始转发。
+- 优点：端口交换时***交换时间短、时延小，交换速度快***；
+- 缺点：不能进行***检错纠错、速度匹配和流量控制***，可靠性较差，适用于**小型交换机**
+
+>为什么一定是帧的前14个字节呢？
+>**——只需要知道到哪儿去就可以了，即7+1+6**
+
+![[Pasted image 20250825193304.png]]
+#### 碎片丢弃交换模式
+- 也称为***无分段交换模式***，在开始转发之前先过滤掉掉造成大部分数据报错误的冲突片。
+- 先检查数据包的长度是否够***64字节***。如果帧的长度小于64，则被视为碎片，交换机***直接丢弃***；而任何***大于64字节***的数据帧都被交换机视为**有效帧，进行转发**；
+- 优点是过滤掉了冲突碎片，提高了网络传速的效率和带宽的利用率
+#### 存储转发交换模式
+- 将接收到的***整个数据帧保存在缓冲区***中，然后进行***循环余码校验检查***，对错误数据帧进行处理后，才取出数据帧的目的地址，进行转发操作
+- 不足在于*数据处理延时大，交换速度相对较慢*
+- 但是它可以对数据帧进行链路差错检验，**可靠性较高**，能有效地址改善网络性能；
+- 同时它可以**支持不同速率**的端口，保持高速端口与低速端口之间的协同工作
+
+### 交换结构差异
+| 交换结构类型        | 优点                    | 缺点                                        |
+| :------------ | :-------------------- | :---------------------------------------- |
+| **软件执行交换结构**  | 结构灵活、易于升级             | 交换速度慢、交换机堆叠困难、交换机端口较多时性能显著下降，主要用于早期的交换机产品 |
+| **矩阵交换结构**    | 交换速度快、延时小、结构紧凑、实现相对简单 | 不易扩展、不方便进行性能监控                            |
+| **总线交换结构**    | 性能较好、便于堆叠扩展、易于实现广播    | 对总线带宽要求较高                                 |
+| **共享存储器交换结构** | 是总线结构的一种变形，结构简单、易于实现  | 规模扩大时产生延时、成本也较高                           |
+## 虚拟局域网技术
+### VLAN
+- 虚拟网VLAN是以交换式网络位基础，把用户的终端设备划分为若干个逻辑工作组每个逻辑工作组就是一个VLAN。
+![[Pasted image 20250825200413.png]]
+- 由于二层交换机工作在数据链路层，VLAN也工作在***数据链路层***
+- VLAN可**隔离广播信息，每个VLAN为一个广播域**，VLAN中的广播信息只能发送给这个VLAN内部的成员，并不发送给其他VLAN成员。
+- 一个VLAN就是一个独立的***逻辑网络（和物理位置、网段无关）***，每个VLAN都具有***唯一的子网号***。不同VLAN中的主机之间必须通过**路由器或者三层交换机，才能实现相互通信**
+#### 标识
+##### VLAN ID
+- VLAN通常用***VLAN ID（Vlan号）、VLAN name（Vlan名）***标识。
+- IEEE802.1Q协议规定，VLAN ID用***12位（bit）表示***，可以支持***4096个VLAN***。其中***1～1005是标准范围，1006～1024为保留范围，1025~4096是扩展范围***，但*并不是所有交换机都能支持4096个VLAN。*
+- 一部分交换机***只支持标准范围1~1005***，其中能用于***以太网的VLAN ID为1~1000（2-1000也正确，1可以作为管理地址也对，但尾部只能是1000）***，***而1002~1005为FDDI和令牌环网使用的VLAN ID。***
+##### VLAB name
+- VLAN name用***32个字符***表示，可以是*字母和数字*。
+- 若创建一个VLAN时，没有给定名字，则系统按默认方式，自动给出命名，***默认为VLAN00 XXX（"XXX"即为该VLAN的VLAN ID）***，如VLAN ID为111，其默认的VLAN名为***VLAN 00111（只缺省了两个0）***。
+- 划分VLAN方法有：***基于端口划分***；基于MAC地址划分；基于第三层协议划分。
+
+## 交换机配置
+**对于还没有配置设备管理地址的交换机应采用Console端口配置**
+### 设置系统时间
+#### Cisco IOS系统（35系列）
+- ***命令格式：clock set hh（时）：mm（分）：ss（秒） day（日）month（月）year（年)***
+- ***记忆方式：35clock set 时 日(加不了星期)***
+![[Pasted image 20250825204810.png]]
+#### Catalyst OS(65系列)
+- ***命令格式：set time  [day_of_week]   [mm（月）/dd（日）/yy（年）]   [hh（时）:mm（分）:ss（秒）]***
+- ***记忆方式：65set time （星期） 日（日月颠倒） 时***
+![[Pasted image 20250825204826.png]]
+### 配置设备管理地址（IP地址）与缺省路由
+#### Cisco IOS系统（35系列）
+- ***配置IP地址命令语句：ip address<IP地址><子网掩码>;***
+- ***配置缺省路由命令语句：ip default-gateway<缺省路由IP地址>；***
+- ***注意！！！：设置缺省路由不可在端口模式（config）下，而应该退出到全局配置模式下配置（config）***
+- 记忆方式：35系列都ip
+#### Catalyst OS(65系列) 
+- ***配置IP地址命令语句：set interface sc0 <IP地址><子网掩码><直接广播地址>；***
+- ***配置缺省路由命令语句：set ip route 0.0.0.0<缺省路由IP地址>;***
+- 记忆方式：65系列都set开头
+### Cisco IOS系统（35系列）综合设置
+#### 配置交换机的端口描述信息
+##### 步骤一：进入端口配置模式
+Switch-3528-TEST(config) # ***interface f0/1（f0/1代表快速以太网端口的第一个端口，光以太网的端口为g0/x）***
+- ***（config）代表已经进入全局配置模式下***
+Switch-3528-TEST(config-if) #
+- ***（config-if）代表进入端口模式下,可以通过输入命令texit退出到config***
+##### 步骤二：配置端口描述信息
+Switch-3528-TEST(config-if) # ***description To-Webserver***
+#### 配置交换机端口的关闭与开启
+##### 步骤一：进入端口配置模式
+Switch-3528-TEST(config) # ***interface fastethernet0/1***（fast ethernet顾名思义）
+Switch-3528-TEST(config-if) #
+
+##### 步骤二：关闭或开启端口
+Switch-3528-TEST(config-if) # **shutdown (关闭端口)***
+Switch-3528-TEST(config-if）#**no shutdown(开启端口，使端口处于工作状态)***
+#### 配置交换机端口的通信方式
+Switch-3528-TEST(config-if）#***duplex auto***（设置为自动协商（自适应），默认为止
+种方式)
+Switch-3528-TEST(config-if) # ***duplex full*** ((设置为全双工)
+Switch-3528-TEST(config-if) # ***duplex halff*** (设置为半双工)
+#### 配置交换机端口的传输速率
+Switch-3528-TEST(config-if）# ***auto***（设置端口为自动速率配置)
+Switch-3528-TEST(config-if) # ***speed 10*** (设置端口速率为10Mbit/s)
+Switch-3528-TEST(config-if)#***speed 100*** (设置端口速率为100Mbit/s)***单位全部为Mbit/s***
+### Catalyst OS (65系列)综合设置
+#### 配置交换机的端口描述信息
+- 命令格式：***set port name <mod/port> name ***，其中，name 为端口描述，字符数一般不超过240个
+- eg:Switch-6509-TEST(enable) # set port name 0/1 to-Webserver
+Switch-6509-TEST(enable)
+#### 配置交换机端口的关闭与开启
+- 命令格式：***set port disable<mod/port>***(关闭端口)
+***set port enable <mod/port>*** (打开端口)
+- *mod和port指的模块号（Module）和端口号（Port）​​*
+- eg:Switch-6509-TEST(enable)set port disable 0/1 (关闭0/1号端口)
+Switch-6509-TEST(enable)set port enable 0/1 (打开0/1号端口)
+#### 配置端口的通信方式
+- 命令格式：***set port duplex<mod/port>full***(设置全双工)
+***set port duplex<mod/port>half***(设置为半双工)
+- eg:Switch-6509-TEST(enable)set port duplex 0/1 full (0/1端口设置为全双工)
+Switch-6509-TEST(enable)set port duplex 0/1 half (0/1到0/24端口设置为半双工)
+#### 配置端口的传输速率
+- 命令格式：***set port speed <mod/port> auto*** (自适应)
+***set port speed <mod/port> <port_speed>*** 设置制定端口速率，***当设置多个端口时将端口x到端口y之间用-连接***
+- eg:Switch-6509-TEST(enable)set port speed 0/1 auto (设置端口的速率为自适应)
+Switch-6509-TEST(enable)set port speed 0/1-24 10 (设置端口0/1到0/24的速率为10Mbps）
+## 交换机VLAN配置
+### VLAN的建立和删除
+#### Cisco IOS系统（35系列）
+##### 建立VLAN
+- 命令格式：***vlan <vlan_ID> name <vlan_name>***
+- eg:Switch-3528-TEST # ***vlan data（进入vlan配置）***
+Switch-3528-TEST>(vlan) # vlan 100 name vlanwork
+##### 删除VLAN
+- Switch-3528-TEST>***(vlan)*** # ***no vlan <vlan_ID>（在vlan配置下）***
+- ***修改VLAN与建立VLAN步骤完全相同，将<vlan_ID>填一样的即可***
+- eg:Switch-3528-TEST>(vlan) # vlan 100 name vlanwork
+Switch-3528-TEST>(vlan) # vlan 100 name vlangroup
+#### Catalyst OS (65系列)
+##### 建立VLAN
+- 命令格式：***set vlan <vlan_ID> name <vlan_name>***
+- eg:Switch-6509-TEST>(enable)set vlan 100 name vlan 100 (建立VLAN 100, 名称为
+vlan 100)
+##### 删除VLAN
+- Switch-6509-TEST>***(vlan)***# ***clear vlan <vlan_name>***
+- ***修改VLAN与建立VLAN步骤完全相同，将<vlan_ID>填一样的即可***
+- eg:Switch-6509-TEST>(enable) set vlan 100 name vlan 100
+Switch-6509-TEST>(enable) set vlan 100 name vlan 1000
