添加部分路由器笔记

--- a/NCRF/计算机三级——网络技术.md
+++ b/NCRF/计算机三级——网络技术.md
@@ -411,7 +411,7 @@ VD便于记忆：
 ##### VLAN ID
 - VLAN通常用***VLAN ID（Vlan号）、VLAN name（Vlan名）***标识。
 - IEEE802.1Q协议规定，VLAN ID用***12位（bit）表示***，可以支持***4096个VLAN***。其中***1～1005是标准范围，1006～1024为保留范围，1025~4096是扩展范围***，但*并不是所有交换机都能支持4096个VLAN。*
-- 一部分交换机***只支持标准范围1~1005***，其中能用于***以太网的VLAN ID为1~1000（2-1000也正确，1可以作为管理地址也对，但尾部只能是1000）***，***而1002~1005为FDDI和令牌环网使用的VLAN ID。***
+- 一部分交换机***只支持标准范围1~1005***，其中能用于***以太网的VLAN ID为1~1000（2-1000也正确，1作为管理地址，但尾部只能是1000）***，***而1002~1005为FDDI和令牌环网使用的VLAN ID。***
 ##### VLAB name
 - VLAN name用***32个字符***表示，可以是*字母和数字*。
 - 若创建一个VLAN时，没有给定名字，则系统按默认方式，自动给出命名，***默认为VLAN00 XXX（"XXX"即为该VLAN的VLAN ID）***，如VLAN ID为111，其默认的VLAN名为***VLAN 00111（只缺省了两个0）***。
@@ -444,7 +444,7 @@ VD便于记忆：
 Switch-3528-TEST(config) # ***interface f0/1（f0/1代表快速以太网端口的第一个端口，光以太网的端口为g0/x）***
 - ***（config）代表已经进入全局配置模式下***
 Switch-3528-TEST(config-if) #
-- ***（config-if）代表进入端口模式下,可以通过输入命令texit退出到config***
+- ***（config-if）代表进入端口模式下,可以通过输入命令exit退出到config***
 ##### 步骤二：配置端口描述信息
 Switch-3528-TEST(config-if) # ***description To-Webserver***
 #### 配置交换机端口的关闭与开启
@@ -507,3 +507,202 @@ vlan 100)
 - ***修改VLAN与建立VLAN步骤完全相同，将<vlan_ID>填一样的即可***
 - eg:Switch-6509-TEST>(enable) set vlan 100 name vlan 100
 Switch-6509-TEST>(enable) set vlan 100 name vlan 1000
+### 插播一个题目
+![[Pasted image 20250826112858.png]]
+- 在***标准直连网络中，基于端口***是通则
+- 此题是因为交换机与主机们**没有直连**，不认识端口，借由**集线器进行了转发**，而集线器又不认识各个主机，所以由交换机**基于MAC地址**认识其他的主机，划分VLAN
+### 为交换机端口分配VLAN
+#### Cisco IOS系统 (35系列)
+##### 步骤一：进入端口配置模式
+Switch-3528-TEST # ***configure terminal******（进入全局模式下）***
+Switch-3528-TEST(config) # ***int f0/1***（int是interface简写）
+Switch-3528-TEST(config-if) #
+##### 步骤二：为端口分配VLAN
+- 命令格式： ***switchport access vlan （vlan-num）***
+- eg:Switch-3528-TEST(config-if） # switchport access vlan 100 (将端口f0/1划分到
+VLAN 100中)**此处将什么端口划分入取决于你int到哪个端口**
+#### Catalyst OS (65系列)
+- 命令格式：***set vlan （vlan-num）（mod/port）***
+- eg:Switch-3528-TEST(enable) set vlan 100 0/1 (将端口0/1划分到VLAN 100中)
+Switch-3528-TEST(enable)
+- 注意：***65系列交换机无需进入端口模式，可直接配置***
+### VLAN Trunk设置
+#### 任务
+- 设置交换机端口的***vlan trunk模式、封装vlan协议，设置允许中继的vlan***
+#### 功能
+- 用vlan trunk为交换机互联的汇聚链路上所**传输的vlan数据帧打上标签**，**保证**多个vlan数据帧的传输，并起到区分作用。
+#### 协议
+- 主要协议：ISL (思科私有协议)***两设备均为思科才可以用私有，否则均用国际标准***
+- ***IEEE802.1Q(dot1q：国际标准协议)***
+#### Cisco IOS系统 (35系列)
+##### 步骤一：同上，进入端口配置
+![[Pasted image 20250826120050.png]]
+##### 配置VLAN Trunk模式
+- Switch-3528-TEST(config-if) # ***switchport mode trunk***
+##### 封装VLAN协议
+- Switch-3528-TEST(config-if) # ***switchport trunk encapsulation dot1q***（配置
+VLAN Trunk的封装模式为802.1q)
+- Switch-3528-TEST(config-if) # ***switchport trunk encapsulation isl*** (封装ISL协
+议)
+- Switch-3528-TEST(config-if) # ***switchport trunk encapsulation negotiate P***
+(自动协商)
+- 英文注释：**encapsulation 封装​**
+##### 设置允许中继的VLAN
+- Switch-3528-TEST(config-if) # ***switchport trunk allowed vlan 1,10*** (允许
+VLAN 1和10通过此Trunk通路)**和用，隔开**
+- Switch-3528-TEST(config-if) # ***switchport trunk allowed vlan 1-10***(允许
+VLAN 1-10通过此Trunk通路)**几至几用-隔开**
+- Switch-3528-TEST(config-if) # ***switchport trunk allowed vlan except 11-20***
+(**阻止**VLAN 11-20通过此Trunk通路)
+#### Catalyst OS (65系列)
+##### 配置VLAN Trunk模式***同时封装协议***
+- 命令格式：***set trunk<mod/port>（mode）（type）***
+- eg:Switch-6509-TEST>(enable) set trunk 1/24 on dot1q (配置VLAN Trunk模式, 封装VLAN协议)***解析：1/24表示模块1上的24端口，on是mode的开启模式，还有off，dot1q是协议type***
+Port(s) 1/24 trunk mode set to on
+##### 设置允许或删除中继的VLAN
+- 命令格式：***set trunk <mod/port> vlan （vlan id）******允许VLAN***
+- eg:Switch-6509-TEST>(enable) set trunk 1/24 vlan 11-20 （在端口1/24的允许VLAN列表中添加11~20号vlan)
+- 命令格式：***clear trunk<mod/port> vlan******删除VLAN***
+- eg:Switch-6509-TEST>(enable) clear trunk 1/24 13-15 (在端口1/24的允许VLAN删除13~15号vlan)
+## 交换机的VTP设置
+![[Pasted image 20250826122820.png]]
+- VTP是VLAN中继协议，也被称为VLAN干道协议
+- 是OSI参考***模型第二层***的通信协议，主要用于管理在同一个域的网络范围内
+VLANs的建立、删除和重命名
+- 配置VTP的任务主要有两个：一是**建立VTP域**，二是**设置VTP的工作模式**；
+- 注意：同一个域的所有交换机，必须运行相同版本的VTP，并具有相同的域名;
+### 新概念
+#### VTP Server
+- 一般一个VTP域内的整个网络只设一个VTP Server，它***维护该VTP域中所有VLAN信息列表，可以建立、删除或修改VLAN。***
+#### VTP Client
+- 维护所有VLAN信息列表，但是它的***VLAN信息是从VTP Server学习到的***，并且***不具有***建立、删除或修改VLAN的功能。
+#### VTP Transparent
+- 相当于一个***独立的交换机，它不参与VTP工作***，不从VTP Server学习VLAN的配置信息，而只拥有本设备上自己的VLAN信息，因此它也只能**建立、删除和修改本机上的VLAN信息**。
+### Cisco IOS系统(35系列)
+#### 配置VTP域名
+- Switch-3528-TEST # configure terminal(进入工作模式)
+- Switch-3528-TEST ***(config)***# ***vtp domin （domain-name）******（设置VTP域名，同一个域的所有交换机，必须设置相同的域名，同时VTP协议的版本号必须一致）***
+#### 配置VTP工作模式
+- Switch-3528-TEST(config)# ***vtp mode server***(设置VTPServer模式，默认值）
+- Switch-3528-TEST(config)# ***vtp mode client*** (设置为VTP Clinet模式)
+- Switch-3528-TEST(config)# ***vtp mode transparent ***（设置为VTP Transparent模式）
+
+### Catalyst OS (65系列)（都只多了set）
+#### 配置VTP域名
+- Switch-6509-TEST>(enable)*** set vtp domain （domain-name）***（***设置VTP域名为domain-name)***
+#### 配置VTP工作模式
+- Switch-6509-TEST>(enable) ***set vtp mode server*** ((设置为VTP Client模式)
+- Switch-6509-TEST>(enable) ***set vtp mode client*** （(设置为VTP Clinet模式)
+- Switch-6509-TEST>(enable) ***set vtp mode transparent***（设置为VTP Transparent模式)
+## 生成树协议STP
+- 生成树协议（STP）是一个**二层链路管理协议**。它主要功能是在**保证网络中没有回路**
+的。
+- 基础上，允许在**第二层链路**中提供**冗余路径**，以保证网络可靠、稳定地运行。
+- ***IEEE802.1D是最早的STP的标准***，它提供了动态余切换机制，是目前最为流行、应用广泛的STP标准。STP运行在***交换机和网桥设备***上，通过计算建立一个稳定的树状结构网络，来避免网络中回路的产生。
+### 网桥
+STP的工作过程为：通过在交换机之间传递***网桥协议数据单元（BPDU ​​Bridge Protocol Data Unit​）***，并运用***生成树算法（STA S​​panning-​T​​ree ​​A​​lgorithm）***对其进行比较计算。
+- 首先进行**根网桥选择**（根网桥为整个生成树拓扑结构的核心，所有数据传输均
+通过根网桥）。
+- 然后确定交换机冗余链路端口的工作状态，让**一些端口进入阻塞工作模式，另些端口进入转发工作模式。**
+- 其中设置为阻塞模式的端口**不能进行数据流的转发和接收**，但仍作为一个激活的端口，可进行**BPDU的接收和读取**。
+#### 网桥协议数据单元（BPDU ​​Bridge Protocol Data Unit​）
+- BPDU中携带了实现生成树算法的有关信息，包括六项：***RootID、RootPathCost、Bridge ID、Port ID、Hello time、Max Age***
+- BPDU数据包有两种类型，一种是包含***配置信息的配置BPDU（不超过35个字节）***，另一个是包含***拓扑变化信息的拓扑变化通知BPDU（不超过4个字节）。***
+- 配置BPDU包的Bridge ID信息，是选取根网桥或根交换机的主要依据。
+- 一般情况下，***Bridge ID值最小***的成为***根网桥或根交换机***。
+#### 生成树协议STP
+- BridgeID用8个字节标识，后6个字节为交换机的MAC地址，前2个字节为优先级值
+
+| 组件     | 长度   |
+| :----- | :--- |
+| 桥优先级   | 2个字节 |
+| 桥Mac地址 | 6个字节 |
+- 优先级值越小，优先级越高（根网桥或根交换机）
+- 优先级***取值范围为0~61440***，增值量为***4096（最少一次增4096）***，交换机的***优先级一般默认为32768可以使用命令人工配置***
+- 选择根网桥时，**优先级相同**，会根据**MAC地址的值**决定根网桥，**MAC的值最小的为根网桥**
+- 默认情况下，交换机***每2秒定时发送一次BPDU***，当检测到**网络拓扑变化或故障发生**时，也会**发生新的BPDU**，以及时进行生成树的更新。
+### 配置STP优先级
+#### Cisco IOS系统 (35系列)
+- 命令格式：***spanning-tree vlan（vlan id）priority（0-61440）***
+- Switch-3528-TEST ***(config)进入全局模式下*** # spanning-tree vlan 3 priority 8192
+#### Catalyst OS (65系列)
+- 命令格式：***set spantree priority<0-61440>（不指定vlan id）***
+- Switch-6509-TEST>(enable)set spantree priority 8192
+### BackboneFast配置
+- BackboneFast的功能就是当***间接链路（骨干链路）失效***，阻塞端口**不需要等待生成树最大存活时间**。而是**直接将端口由侦听和学习状态转换为转发状态**;*（即自己并不和根交换机相连，而是通过另外的非根交换机B间接连接，当B与根断了，我可以快速换另一根间接路）*
+![[Pasted image 20250826125415.png]]
+#### 配置命令
+![[Pasted image 20250826125520.png]]
+### UplinkFast配置
+UplinkFast的功能是当生成树拓扑结构发生变化和在使用上连链路组的冗余链路之间完成负载平衡时，***直接链路（上连链路）失效***时，阻塞端口***直接跳过侦听和学习，变成转发状态，提供快速收敛。****（当有多根连通到目标交换机的线路断了一根秒切另一根）*
+![[Pasted image 20250826125639.png]]
+#### 配置命令
+![[Pasted image 20250826125702.png]]
+### PortFast配置
+PortFast用于在接入层交换机端口上***跳过正常的生成树操作***，加快终端工作站接入到网络中的速度。它的功能是使***交换机的端口***跳过侦听和学习状态。直接从***阻塞状态进入到转发状态。****（插上秒用）*
+#### 配置命令
+![[Pasted image 20250826125816.png]]
+### BPDU Filter配置
+BPDU Filtering会使交换机在指定的端口上***停止发送BPDUs***，对于进入这个端口的BPDUs也***不做任何处理***，同时***立刻将端口状态转换为转发状态***；*（让端口不发不收）*
+#### 配置命令
+![[Pasted image 20250826125938.png]]
+# 路由器的配置和使用
+路由器是工作在**网络层**的设备，负责将数据分组从源端主机经最佳路径传送到目的端主机，实现在网络层的互联。路由器工作在TCP/IP网络模型的网络层，对应于OSI网络参考模型的第三层，因此，路由器也常称为网络层互联设备。
+路由器是互联网的主要节点设备。路由器通过路由决定数据的转发，转发策略称为**路由选择（routing）**
+## 路由器的结构
+- 有硬件和软件组成，路由器软件主要由路由器的操作系统（互联网操作系统组成），用于控制和实现路由器的全部功能。
+- 硬件：路由器硬件组成部分有：中央处理器（CPU）、内存（Memory）、***存储器(Storage）***、***接口（lnterface）***;
+- CPU是路由器的心脏，CPU的能力直接影响路由器的路由表查找时间、吞吐量和路由器的性能。
+### 内存
+- 保存路由器配置、路由器操作系统、路由协议软件等。主要类型有：***只读内存（ROM）、随机存储器（RAM）、非易失性随机存储器（NVRAM）和闪存（Flash）。***
+- ①只读内存 (ROM)：用来永久保存路由器的的***开机诊断程序、引导程序和操作系统软件***。ROM的主要任务是完成路由器的初始化进程，具体包括路由器启动时硬件诊断、装入路由器操作系统IOS等。ROM是只读存储器，不能修改其中保存的内容。
+- ②随机存储器 (RAM)：可读可写存储器，在路由器操作系统运行期间，RAM主要存储***路由表、快速交换缓存、ARP缓存、数据分组缓冲区和缓存队列、运行配置文件，以及正在执行的代码和一些临时数据信息***等。在关机和重启路由器之后，RAM里的数据会自动丢失。
+- ③非易失性随机存储器（NVRAM）：也可读可写。主要用于存储***启动配置文件（startup-config）或备份配置文件***。NVRAM**容量较小**，通常存储量只有32KB～128KB，但是***存取速度非常快，而且保存的数据不会丢失***。
+- ④闪存 (Flash)：是可擦写的ROM，***主要用于存储路由器当前使用的操作系统映像文件和一些微代码***。闪存的容量比较大，可以用来保存备份的配置文件，也不丢失保存数据。
+### 补充
+![[Pasted image 20250826143118.png]]
+## 路由器的工作原理
+完成两个工作：即 路由选择和分组转发
+![[Pasted image 20250826144241.png]]每个数据包的目的和源***MAC地址都会变化***，且目标临时IP地址也会变，但是最终的***目的网络IP地址是始终不变的***。**注意：路由器的不同端口的IP地址也是不一样的**
+### 路由表
+路由表中记录着所有路由信息，路由表的内容主要包括目的网络地址及其所对应的目的端口或下一跳路由器地址或缺省路由的信息。
+- ①**第一列**表示路由表项的来源，标识这个路由表项是通过什么方式或者通过何种路由选择协议建立的。
+- "C"表示**直连路由**（conected），表示目的网络直接与路由器端口相连
+- "S”表示为**静态**（static）路由；s* 是缺省路由，0.0.0.0/0
+- "I”表示使用IGRP内部网关路由协议学习到的路由信息；
+- "O”表示使用OSPF开放最短路径优先协议学习到的路由信息
+- ②**第2列**表示的是目的网络的地址和掩码长度；
+- ③**第3列**表示目的端口或者下一跳路由器的地址;
+- "[]”中的前半部分为管理距离，后半部分为权值；
+
+| 路由信息源 | 管理距离值 |
+| ---------- | ---------- |
+| 直接连接   | 0          |
+| 静态路由   | 1          |
+| IGRP       | 100        |
+| OSPF       | 110        |
+| 内部BGP    | 200        |
+#### 判断路由表正确标准
+- ***路由器后跟端口名：三层交换机后跟虚拟局域网号***
+- ***via+具体IP***
+- ***管理距离值对应是否正确***
+### 路由器工作模式
+#### 用户模式：Router>（User EXEC)
+用户只能运行少数的命令（如ping、show version、telnet等)有限度地查看路由器的相关信息，但**不能对路由器的配置做任何修改，也不能查看路由器的配置信息**，只能对路由器做一些简单的操作，因而它是一个**只读模式**
+#### 特权模式：Router#(Privileged EXEC)
+***用户模式***下，输入***enable命令***后按回车键，即可进入超级权限模式（如果设置了口令，还需要在回车后按提升输入口令）。该模式下，最常用的操作包括**管理系统时钟、进行错误检测、查看和保存配置文件、清除闪存、处理并完成路由器的冷启动**等操作。
+#### 全局配置模式：Router(config)#(Global Configuration)
+在***特权模式***下，输入***config terminal命令后回车***，即可以进入全局配置模式。全局配置模式用于***配置路由器的全局性参数***（主机名口令，TFTP服务器，静态路由，访问控制列表等）
+#### 其他配置模式（接口配置模式、虚拟终端配置模式、路由协议配置模式）
+- 均基于***全局配置模式***下打开
+- ***接口***配置模式：Router(config)#***interface f0/1***
+Router(config-if)#
+- ***虚拟终端***配置模式：Router(config)#***line vty 0 15（0 15表示从0到15）***
+Router(config-line)#
+- ***路由协议***配置模式：Router(config)#***router ospf***
+Router(config-router)#
+#### RXBOOT模式
+- 当密码丢失时，可以从该模式下恢复，因此该模式是路由器的维护模式。
+#### 设置（SETUP）模式
+- 在任何时候，要进入设置模式，在***特权模式***下，输入***setup***即可。
+- 新路由器**第一次进行配置**时，系统会自动进入设置模式，并询问是否采用该方式进行配置。
