傻逼，笔记真jb多

--- a/NCRF/计算机三级——网络技术.md
+++ b/NCRF/计算机三级——网络技术.md
@@ -820,3 +820,92 @@ Router-xb(config-if)#no ip mroute-cache
 Router-xb(config-if)#exit
 Router-xb(config)#exit
 Router#
+## 路由器的静态路由配置
+静态路由是指由***网络管理员手工配置的路由信息***，使用静态路由协议时，路由器不能根据网络的实际情况动态地进行路由选择。当网络的拓扑结构或链路的状态发生变化时，也无法动态地更新路由表，必须由网络管理员手动去修改路由表中相关的静态路由信息。因此它适合规模较小，网络拓扑结构没有变化的局域网和采用点到点方式连接的较为简单的网络互连环境
+### 配置方式
+静态路由使用"***ip route***"命令在**全局配置模式**下配置，使用“**no ip route**"命
+令可删除静态路由配置。静态路由配置的命令格式如下
+- 命令格式：***ip route <目的网络地址><子网掩码><下一跳路由器的IP地址>***
+- eg:Router-xb(config)#ip route 10.0.0.0 255.0.0.0 192.168.2.123
+- 其中，***默认路由的静态配置方式为：ip route 0.0.0.0 0.0.0.0 下一跳路由器的IP地址***
+## 动态路由协议配置
+### RIP基本配置
+在路由器上**启动RIP协议**，**开始RIP进程**，设置参与RIP路由的网络地址，配置被动接口（passive-interface）等。
+#### 基本配置如下:
+- Router(config)#***router rip***
+- Router ***(config-router)***# ***network 159.105.0.0（network IP地址）***
+- Router(config-router)#network 212.201.6.0
+- RIP的高级配置：配置被动接口（非重要考点）
+- Router(config)#router rip
+- Router ***(config-router)*** #***passive-interface Ethernet0（在RIP协议配置模式下）***
+### OSPF基本配置
+- ①Router ospf：该命令用来启动OSPF进程
+- 命令格式为***Router ospf （Process ID）***
+- 其中***ProcessID（PID）是OSPF的进程号，它的范围是1～65535***。
+- ②network：该命令用来定参与定义OSPF的**子网地址**
+- 命令格式：***network<网络地址><子网掩码反码>area<区域号>（注意！！！：只有OSPF设置的network后子网掩码反码）***
+- ③range：该命令用于定义**某一特定范围子网地址**。
+- 命令格式：***area <区域号> range <子网地址> <子网掩码>***
+- 注意：**②和③的网络地址，子网地址是同一个**
+#### 总配置
+Router-xb(config)#**router ospf 10**
+Router-xb(config-router)#**network 192.168.1.0 0.0.0.255 area 0***
+Router-xb(config-r0uter)#***area 0 range 212.37.123.0 255.255.255.0***
+Router-xb(config-router)#exit
+**在单个IP地址参与OSPF时，反掩码0.0.0.0**
+Router-xb(config)#router ospf 10
+Router-xb(config-router)#network 192.168.1.0 0.0.0.0 area 0
+Router-xb(config-router)#exit
+## 路由器DHCP配置
+设置为DHCP服务器，在路由器上需要完成的配置任务主要是**建立IP地址池**（Pool）和**配置IP地址池的相关参数**。首先需要配置的是IP地址池的名称再进入DHCP地址池配置模式，在该模式下对DHCP进行配置，主要任务包括：**IP地址池的子网地址和子网掩码、默认网关、域名和域名服务器IP地址、IP地址租用时间**等配置。
+### IP地址池的建立
+- 在**全局配置模式**下使用***ip dhcp pool（name）*** 命令为地址池赋予一个名称，其中name是为所建的地址池提供的名称，可以是一组字符串或数字。
+- eg:Router-xb(config)#ip dhcp pool 123 (建立名为123的地址池)
+Router-xb(dhcp-config)#
+### 配置IP地址池的子网地址与子网掩码
+- 池建立后，便进入地址池配置模式，在该模式下可进行IP子网地址和子网掩码的配置，用于设定DHCP服务器可以分配的IP地址的范围。
+- 配置的方法是在**IP地址池配置模式**下，执行"***network<网络地址><子网掩码>***"命令，其中<子网掩码>可采用**标准的子网掩码表示**（如255.255.255.0）或使用**掩码前缀长度**表示（如/24)。
+- eg:Router-xb(dhcp-config)# network 192.168.1.0 255.255.255.0
+Router-xb(dhcp-config)#
+上述命令也可以表示如下：
+Router-xb(dhcp-config)#network 192.168.1.0 /24
+Router-xb(dhcp-config)#
+### 排除不用于动态分配的IP地址
+- 配置方法为在**全局配置模式**下，使用"***ip dhcp excluded-address low-address [high-address]***"命令，其中“**low-address[high-address]**"表示要排除的IP地址的范围。
+- ①排除单个IP地址192.168.1.11
+- Router-xb(config)# ip dhcp excluded-address 192.168.1.11
+Router-xb(config)#
+- ②排除从192.168.1.1到192.168.1.10的一段IP地址，**直接空格表示**
+- Router-xb(config)# ip dhcp excluded-address 192.168.1.1 192.168.1.10
+Router-xb(config)#
+### 配置默认网关
+动态分配IP地址时，还需要同时为客户端指定默认网关，以便客户端TCP/IP协议正常工
+作。
+- 配置方法为在**IP地址池配置模式**下，执行"***default-router address [address2,...,address8]***"，其中**地址用逗号隔开，默认网关的地址，最多可以设置8个。**
+- eg:Router-xb(dhcp-config)#default-router 192.168.1.254
+Router-xb(dhcp-config)#
+### 配置IP地址池的域名系统
+- 域名服务器的配置方法为在**IP地址池配置模式**下使用“**dns-server address**"命令，该命令**允许最多配置8个域名服务器**地址，但是在实际应用中，域名服务器一般只有**两个或三个**
+- IP地址池中客户端域名的配置方法为在DHCP地址池配置模式下，使用“**domin name（name）**"命令，其中**name为指定的域名名称**。
+- ①配置DNS
+- Router-xb(dhcp-config)#***dns-server address 202.102.192.68 (在地址池配置模式下)***
+Router-xb(dhcp-config)#
+- ②配置DHCP客户端域名
+- Router-xb(dhcp-config)#domin-name xueba.com
+### IP租用时间
+- 在DHCP地址池配置模式下，使用***lease {day（hours）（minutes）丨infinite}***命令
+- 其中参数可以包含天数、小时数以及分秒数，还可以设置为**永不过期**(infinite)
+- Router-xb(dhcp-config)#**lease 0 3**(设置租用时间为3小时)
+Router-xb(dhcp-config)#lease infinite
+Router-xb(dhcp-config)#
+## 访问控制列表的功能及其配置
+访问控制列表（Access ControlList，ACL)，**通过在路由器接口处控制路由数据包是被转发还是被阻塞来过滤网络通信流量（本质是过滤数据包的）。** 路由器根据ACL中指定的条件来检测通过路由器的每个数据包，从而决定是转发还是丢弃该数据包。
+### IP访问控制列表的分类
+#### 标准访问控制列表
+- **只能检查数据包的源地址**，根据源网络、子网或者主机的IP地址来决定数据包的过滤。
+- 标准访问控制列表的表号是**1-99**。后来又进行了扩展，扩展的表号是*1300-1999*。
+#### 扩展访问控制列表
+- 可以检查**数据包的源地址和目的地址**，根据源网络或者目的网络、子网、主机的IP地址决定数据包的过滤操作。
+- 扩展访问控制列表除了检查源地址和目的地址外，还可以**检查指定的协议**，根据数据包头中的协议类型进行过滤，比如***IP协议，ICMP协议、TCP协议和UDP协议***等
+- 扩展访问控制列表的表号是**100-199**，扩展的表号是2000-2699。
+### 
